--- a/Constancias/GUI.csproj
+++ b/Constancias/GUI.csproj
@@ -66,6 +66,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GenerarConstancia.xaml.cs">
+      <DependentUpon>GenerarConstancia.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SolicitarConstancia.xaml.cs">
+      <DependentUpon>SolicitarConstancia.xaml</DependentUpon>
+    </Compile>
+    <Page Include="GenerarConstancia.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -78,6 +88,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SolicitarConstancia.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -106,7 +120,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Recursos\logoUV.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Recursos\feiuv.png" />
   </ItemGroup>
