Cambios para ventanas

--- a/Constancias/GUI.csproj
+++ b/Constancias/GUI.csproj
@@ -72,10 +72,17 @@
     <Compile Include="GenerarConstancia.xaml.cs">
       <DependentUpon>GenerarConstancia.xaml</DependentUpon>
     </Compile>
+    <Compile Include="InicioAdministrativo.xaml.cs">
+      <DependentUpon>InicioAdministrativo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SolicitarConstancia.xaml.cs">
       <DependentUpon>SolicitarConstancia.xaml</DependentUpon>
     </Compile>
     <Page Include="GenerarConstancia.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="InicioAdministrativo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
