--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,8 +36,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,11 +55,111 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="academico.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="areaacademica.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="constancia.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ConstanciasModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ConstanciasModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ConstanciasModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ConstanciasModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ConstanciasModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="experienciaeducativa.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="participacion.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="periodo.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="productoacademico.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="programaeducativo.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="proyectocampo.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="rolacademico.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tipoconstancia.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tipoparticipacion.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tipopersonal.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tipoproducto.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tipopublicacion.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tipotrabajo.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="trabajorecepcional.cs">
+      <DependentUpon>ConstanciasModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="ConstanciasModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ConstanciasModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="ConstanciasModel.edmx.diagram">
+      <DependentUpon>ConstanciasModel.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ConstanciasModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ConstanciasModel.edmx</DependentUpon>
+      <LastGenOutput>ConstanciasModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="ConstanciasModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ConstanciasModel.edmx</DependentUpon>
+      <LastGenOutput>ConstanciasModel.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.5.1\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.5.1\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" />
 </Project>
