--- a/DataAccess/App.config
+++ b/DataAccess/App.config
@@ -12,4 +12,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="gestionconstanciasEntities" connectionString="metadata=res://*/ConstanciasModel.csdl|res://*/ConstanciasModel.ssdl|res://*/ConstanciasModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-R5DRO0D7\SQLEXPRESS;initial catalog=gestionconstancias;user id=SGCDBOUSER;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="gestionconstanciasEntities" connectionString="metadata=res://*/ConstanciasModel.csdl|res://*/ConstanciasModel.ssdl|res://*/ConstanciasModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-R5DRO0D7\SQLEXPRESS;initial catalog=gestionconstancias;user id=SGCDBOUSER;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConstanciasEntities" connectionString="metadata=res://*/Constancias.csdl|res://*/Constancias.ssdl|res://*/Constancias.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Victus-DUAA\SQLEXPRESS;initial catalog=Constancias;persist security info=True;user id=SGCDBUSER;password=passwordSGC;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
