--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -77,7 +77,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Constancias.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Constancias.cs" />
     <Compile Include="Constancias.Designer.cs">
       <DependentUpon>Constancias.edmx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -103,6 +102,12 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProyectoCampo.cs">
+      <DependentUpon>Constancias.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>Constancias.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
       <DependentUpon>Constancias.tt</DependentUpon>
     </Compile>
     <Compile Include="TrabajoRecepcional.cs">
