--- a/Pruebas/packages.config
+++ b/Pruebas/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MaterialDesignColors" version="3.1.0" targetFramework="net48" />
+  <package id="MaterialDesignThemes" version="5.1.0" targetFramework="net48" />
   <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net48" />
   <package id="Microsoft.Testing.Extensions.Telemetry" version="1.4.3" targetFramework="net48" />
   <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.4.3" targetFramework="net48" />
@@ -7,6 +9,7 @@
   <package id="Microsoft.Testing.Platform" version="1.4.3" targetFramework="net48" />
   <package id="Microsoft.Testing.Platform.MSBuild" version="1.4.3" targetFramework="net48" />
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.12.0" targetFramework="net48" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
   <package id="MSTest.TestAdapter" version="3.6.3" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="3.6.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
