--- a/DataAccess/App.config
+++ b/DataAccess/App.config
@@ -1,21 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<configSections>
-		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-	</configSections>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-	</startup>
-	<connectionStrings>
-		<add name="ConstanciasEntities" connectionString="metadata=res://*/Constancias.csdl|res://*/Constancias.ssdl|res://*/Constancias.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARLA\SQLEXPRESS;initial catalog=Constancias;integrated security=False;user id=SGCDBUSER;password=passwordSGC;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
-	<entityFramework>
-		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework" />
-		<providers>
-			<provider invariantName="System.Data.SqlClient"
-              type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-		</providers>
-	</entityFramework>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <add name="gestionconstanciasEntities" connectionString="metadata=res://*/ConstanciasModel.csdl|res://*/ConstanciasModel.ssdl|res://*/ConstanciasModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-R5DRO0D7\SQLEXPRESS;initial catalog=gestionconstancias;user id=SGCDBOUSER;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConstanciasEntities" connectionString="metadata=res://*/Constancias.csdl|res://*/Constancias.ssdl|res://*/Constancias.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Victus-DUAA\SQLEXPRESS;initial catalog=Constancias;persist security info=True;user id=SGCDBUSER;password=passwordSGC;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
