--- a/DataAccess/App.config
+++ b/DataAccess/App.config
@@ -9,7 +9,7 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
 	<connectionStrings>
-		<add name="ConstanciasEntities" connectionString="metadata=res://*/Constancias.csdl|res://*/Constancias.ssdl|res://*/Constancias.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARLA\SQLEXPRESS;initial catalog=Constancias;integrated security=False;user id=SGCDBUSER;password=passwordSGC;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="ConstanciasEntities" connectionString="metadata=res://*/Constancias.csdl|res://*/Constancias.ssdl|res://*/Constancias.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=Constancias;integrated security=False;user id=SGCDBUSER;password=passwordSGC;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework" />
